--- a/backend/package.json
+++ b/backend/package.json
@@ -18,9 +18,19 @@
   "homepage": "https://github.com/BuildForSDGCohort2/team-024-group-a#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "bookshelf": "^1.2.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "morgan": "^1.10.0"
+    "jsonwebtoken": "^8.5.1",
+    "knex": "^0.21.5",
+    "morgan": "^1.10.0",
+    "mysql": "^2.18.1",
+    "nodemailer": "^6.4.11",
+    "passport": "^0.4.1",
+    "passport-http": "^0.3.0",
+    "passport-http-bearer": "^1.0.1",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
