--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [build]
   command = "npm run build"
-  publish="frontend/build"
-  base = "frontend"
+  base = "frontend/"
+  publish="build/"
   
 [[redirects]]
   from = "/*"
